LogIn and logOut

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@ html {
     background-repeat: no-repeat; }
   
   .probootstrap-cover {
-    background-image: url('./assets/img/cover_bg.svg');
+    background-image: url('./assets/img/landingPage.jpg');
     background-position: center center; }
     .probootstrap-cover .probootstrap-text .probootstrap-heading {
       font-size: 70px;
