--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
 
     <div class="collapse navbar-collapse" id="probootstrap-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Product Page</a></li>
+        <li class="nav-item"><a [routerLink]="['']" class="nav-link">Home</a></li>
+        <li class="nav-item"><a [routerLink]="['/product']" class="nav-link">Product Page</a></li>
      
       </ul>
      
