--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,7 +8,7 @@
           <div class="probootstrap-subheading mb-5">
             <p class="h4 font-weight-normal">We can make greate things</p>
           </div>
-          <p><a href="#" class="btn btn-primary mr-2 mb-2">Log in</a><a href="#" class="btn btn-primary btn-outline-white mb-2">Sign up</a></p>
+          <p><a [routerLink]="['/login']" class="btn btn-primary mr-2 mb-2">Log in </a><a [routerLink]="['/register']" class="btn btn-primary btn-outline-white mb-2">Sign up</a></p>
         </div>
       </div>
     </div>
